--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+    <div class="banner">
+        <h1>Welcome</h1>
+    </div>
     <main></main>
     <footer></footer>
 </body>
